<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Routing API</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Hello HERE Maps!</string>
    <string name="label_button_getdirections">Get Directions</string>
    <string name="textview_routecoordinates_2waypoints">Press "Get Directions" button to calculate a route:</string>
    <string name="pick">Pick Up</string>
    <string name="drop">Drop Off</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="pickup">Select pick up location</string>
    <string name="dropoff">Select drop off location</string>
    <string name="streetview">Start navigation</string>
    <string name="mapview">Stop navigation</string>
    <string name="ok">OK</string>
    <string name="search">Search for a place</string>
    <string name="manage">Manage waypoints</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="insert">Insert before this</string>
    <string name="add">Add new waypoint</string>
    <string name="back">Back</string>
    <string name="reset">Reset</string>
    <string name="eta">View ETA</string>
</resources>