<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

    <!-- UI element declaration for "Get Directions" button -->
    <android.widget.Button
        android:id="@+id/directionsbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_button_getdirections"
        android:onClick="getDirections" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Spinner>

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Spinner>

</LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        tools:context=".RoutingActivity" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/pick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pick" />

            <TextView
                android:id="@+id/source"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/drop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drop" />

            <TextView
                android:id="@+id/destination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

        </LinearLayout>

    </LinearLayout>

    <fragment
        android:id="@+id/mapfragment1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        class="com.here.android.mpa.mapping.SupportMapFragment" />

</LinearLayout>

